[project]
name = "supertone-api-test"
version = "0.1.0"
description = ""
authors = [
    {name = "hagyutae",email = "gted221@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyaudio (>=0.2.14,<0.3.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "requests (>=2.32.4,<3.0.0)",
    "sounddevice (>=0.5.2,<0.6.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "httpx[http2] (>=0.28.1,<0.29.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
